// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simpleParse 1`] = `
Array [
  Array [
    Object {
      "end": 10,
      "line": 1,
      "start": 4,
      "string": "select",
      "type": "KEYWORD",
    },
    Object {
      "end": 17,
      "line": 1,
      "start": 13,
      "string": "from",
      "type": "KEYWORD",
    },
    Object {
      "end": 23,
      "line": 1,
      "start": 18,
      "string": "table",
      "type": "KEYWORD",
    },
    Object {
      "end": 29,
      "line": 1,
      "start": 24,
      "string": "where",
      "type": "KEYWORD",
    },
    Object {
      "end": 36,
      "line": 1,
      "start": 30,
      "string": "fielda",
      "type": "VARIABLE",
    },
    Object {
      "end": 40,
      "line": 1,
      "start": 39,
      "string": "5",
      "type": "NUMBER",
    },
  ],
  Array [
    Object {
      "end": 10,
      "line": 2,
      "start": 4,
      "string": "select",
      "type": "KEYWORD",
    },
    Object {
      "end": 17,
      "line": 2,
      "start": 13,
      "string": "from",
      "type": "KEYWORD",
    },
    Object {
      "end": 23,
      "line": 2,
      "start": 18,
      "string": "table",
      "type": "KEYWORD",
    },
    Object {
      "end": 29,
      "line": 2,
      "start": 24,
      "string": "where",
      "type": "KEYWORD",
    },
    Object {
      "end": 36,
      "line": 2,
      "start": 30,
      "string": "fieldb",
      "type": "VARIABLE",
    },
    Object {
      "bracketIndex": 13,
      "end": 40,
      "line": 2,
      "start": 39,
      "string": "(",
      "type": "BRACKET",
    },
    Object {
      "end": 46,
      "line": 2,
      "start": 40,
      "string": "select",
      "type": "KEYWORD",
    },
    Object {
      "end": 53,
      "line": 2,
      "start": 47,
      "string": "fielda",
      "type": "VARIABLE",
    },
    Object {
      "end": 58,
      "line": 2,
      "start": 54,
      "string": "from",
      "type": "KEYWORD",
    },
    Object {
      "end": 64,
      "line": 2,
      "start": 59,
      "string": "table",
      "type": "KEYWORD",
    },
    Object {
      "end": 70,
      "line": 2,
      "start": 65,
      "string": "where",
      "type": "KEYWORD",
    },
    Object {
      "end": 77,
      "line": 2,
      "start": 71,
      "string": "fieldb",
      "type": "VARIABLE",
    },
    Object {
      "end": 81,
      "line": 2,
      "start": 80,
      "string": "5",
      "type": "NUMBER",
    },
    Object {
      "end": 82,
      "line": 2,
      "start": 81,
      "string": ")",
      "type": "BRACKET",
    },
  ],
]
`;

exports[`simpleParse 2`] = `
Array [
  Array [
    Object {
      "end": 6,
      "line": 0,
      "start": 0,
      "string": "select",
      "type": "KEYWORD",
    },
    Object {
      "end": 13,
      "line": 0,
      "start": 9,
      "string": "from",
      "type": "KEYWORD",
    },
    Object {
      "end": 19,
      "line": 0,
      "start": 14,
      "string": "table",
      "type": "KEYWORD",
    },
    Object {
      "end": 25,
      "line": 0,
      "start": 20,
      "string": "where",
      "type": "KEYWORD",
    },
    Object {
      "end": 33,
      "line": 0,
      "start": 26,
      "string": "extract",
      "type": "KEYWORD",
    },
    Object {
      "bracketIndex": 9,
      "end": 34,
      "line": 0,
      "start": 33,
      "string": "(",
      "type": "BRACKET",
    },
    Object {
      "end": 38,
      "line": 0,
      "start": 34,
      "string": "year",
      "type": "KEYWORD",
    },
    Object {
      "end": 43,
      "line": 0,
      "start": 39,
      "string": "from",
      "type": "KEYWORD",
    },
    Object {
      "end": 50,
      "line": 0,
      "start": 44,
      "string": "fielda",
      "type": "VARIABLE",
    },
    Object {
      "end": 51,
      "line": 0,
      "start": 50,
      "string": ")",
      "type": "BRACKET",
    },
    Object {
      "end": 55,
      "line": 0,
      "start": 54,
      "string": "5",
      "type": "NUMBER",
    },
  ],
]
`;

exports[`tokenize 1`] = `
Array [
  Object {
    "end": 6,
    "line": 0,
    "start": 0,
    "string": "select",
    "type": "KEYWORD",
  },
  Object {
    "end": 8,
    "line": 0,
    "start": 7,
    "string": "*",
    "type": "OPERATOR",
  },
  Object {
    "end": 13,
    "line": 0,
    "start": 9,
    "string": "from",
    "type": "KEYWORD",
  },
  Object {
    "end": 19,
    "line": 0,
    "start": 14,
    "string": "table",
    "type": "KEYWORD",
  },
  Object {
    "end": 25,
    "line": 0,
    "start": 20,
    "string": "where",
    "type": "KEYWORD",
  },
  Object {
    "end": 27,
    "line": 0,
    "start": 26,
    "string": "a",
    "type": "KEYWORD",
  },
  Object {
    "end": 29,
    "line": 0,
    "start": 28,
    "string": "=",
    "type": "OPERATOR",
  },
  Object {
    "end": 31,
    "line": 0,
    "start": 30,
    "string": "5",
    "type": "NUMBER",
  },
  Object {
    "end": 32,
    "line": 0,
    "start": 31,
    "string": ";",
    "type": "SEMI",
  },
]
`;

exports[`tokenize 2`] = `
Array [
  Object {
    "end": 6,
    "line": 1,
    "start": 0,
    "string": "select",
    "type": "KEYWORD",
  },
  Object {
    "end": 6,
    "line": 2,
    "start": 2,
    "string": "aa.a",
    "type": "VARIABLE",
  },
  Object {
    "end": 7,
    "line": 2,
    "start": 6,
    "string": ",",
    "type": "COMMA",
  },
  Object {
    "end": 6,
    "line": 3,
    "start": 2,
    "string": "aa.b",
    "type": "VARIABLE",
  },
  Object {
    "end": 4,
    "line": 4,
    "start": 0,
    "string": "from",
    "type": "KEYWORD",
  },
  Object {
    "end": 9,
    "line": 5,
    "start": 2,
    "string": "table_a",
    "type": "VARIABLE",
  },
  Object {
    "end": 12,
    "line": 5,
    "start": 10,
    "string": "aa",
    "type": "VARIABLE",
  },
  Object {
    "end": 6,
    "line": 6,
    "start": 2,
    "string": "join",
    "type": "KEYWORD",
  },
  Object {
    "end": 14,
    "line": 6,
    "start": 7,
    "string": "table_b",
    "type": "VARIABLE",
  },
  Object {
    "end": 17,
    "line": 6,
    "start": 15,
    "string": "bb",
    "type": "VARIABLE",
  },
  Object {
    "end": 20,
    "line": 6,
    "start": 18,
    "string": "on",
    "type": "KEYWORD",
  },
  Object {
    "end": 25,
    "line": 6,
    "start": 21,
    "string": "aa.a",
    "type": "VARIABLE",
  },
  Object {
    "end": 27,
    "line": 6,
    "start": 26,
    "string": "=",
    "type": "OPERATOR",
  },
  Object {
    "end": 32,
    "line": 6,
    "start": 28,
    "string": "bb.b",
    "type": "VARIABLE",
  },
  Object {
    "end": 5,
    "line": 7,
    "start": 0,
    "string": "where",
    "type": "KEYWORD",
  },
  Object {
    "end": 6,
    "line": 8,
    "start": 2,
    "string": "aa.b",
    "type": "VARIABLE",
  },
  Object {
    "end": 8,
    "line": 8,
    "start": 7,
    "string": "=",
    "type": "OPERATOR",
  },
  Object {
    "end": 10,
    "line": 8,
    "start": 9,
    "string": "3",
    "type": "NUMBER",
  },
  Object {
    "end": 5,
    "line": 9,
    "start": 0,
    "string": "order",
    "type": "KEYWORD",
  },
  Object {
    "end": 8,
    "line": 9,
    "start": 6,
    "string": "by",
    "type": "KEYWORD",
  },
  Object {
    "end": 6,
    "line": 10,
    "start": 2,
    "string": "bb.b",
    "type": "VARIABLE",
  },
  Object {
    "end": 5,
    "line": 11,
    "start": 0,
    "string": "limit",
    "type": "KEYWORD",
  },
  Object {
    "end": 3,
    "line": 12,
    "start": 2,
    "string": "5",
    "type": "NUMBER",
  },
]
`;
